[package]
name = "optempty"
authors = [
    "Daniel Cormier",
    "Michael Hanley",
]
version = "0.1.7"
edition = "2018"
description = "Tools for working with `Option<T>` where `T` may be empty (e.g., an empty `String` or `Vec`)"
documentation = "https://docs.rs/optempty/"
repository = "https://github.com/dcormier/optempty-rs"
license= "Apache-2.0"
keywords = [
    # "result",
    "option",
    "empty",
    # "none",
    "collection",
    # "collections",
    # "binaryheap",
    # "btreemap",
    # "btreeset",
    "hashmap",
    # "hashset",
    # "linkedlist",
    "vec",
    # "vecdeque",
]
categories = [
    "data-structures",
    "rust-patterns",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
maplit = "1"
