[package]
name = "optempty"
authors = [
    "Daniel Cormier",
    "Michael Hanley",
]
version = "0.1.9"
edition = "2018"
resolver = "2"
description = "Tools for working types that may be empty. E.g., an empty `String`, `Vec`, `HashMap`, etc."
documentation = "https://docs.rs/optempty/"
repository = "https://github.com/dcormier/optempty-rs"
license= "Apache-2.0"
keywords = [
    # "result",
    "option",
    "empty",
    # "none",
    "collection",
    # "collections",
    # "binaryheap",
    # "btreemap",
    # "btreeset",
    "hashmap",
    # "hashset",
    # "linkedlist",
    "vec",
    # "vecdeque",
]
categories = [
    "data-structures",
    "rust-patterns",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", optional = true }

[dev-dependencies]
maplit = "1"

[features]
default = []
serdejson = ["serde_json"]
