[package]
name = "optempty"
authors = [
    "Daniel Cormier",
    "Michael Hanley",
]
version = "0.1.11"
edition = "2021"
description = "Tools for working types that may be empty. E.g., an empty `String`, `Vec`, `HashMap`, etc."
documentation = "https://docs.rs/optempty/"
repository = "https://github.com/dcormier/optempty-rs"
license= "Apache-2.0"
keywords = [
    # "result",
    "option",
    "empty",
    # "none",
    "collection",
    # "collections",
    # "binaryheap",
    # "btreemap",
    # "btreeset",
    "hashmap",
    # "hashset",
    # "linkedlist",
    "vec",
    # "vecdeque",
]
categories = [
    "data-structures",
    "rust-patterns",
    "no-std",
]
exclude = [
    "check.sh"
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[dependencies]
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = []
serdejson = ["serde_json"]
